[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmesh"
version = "0.1.0"
description = "TaskMesh: an agent task queue protocol and Python reference implementation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Bibek Ghimire" }
]
keywords = ["agents", "queue", "task-queue", "multi-agent", "workflow", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing"
]

[project.urls]
Homepage = "https://github.com/ghimbib/taskmesh"
Repository = "https://github.com/ghimbib/taskmesh"
Issues = "https://github.com/ghimbib/taskmesh/issues"

[project.scripts]
taskmesh = "taskmesh.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["taskmesh*"]
